# vet_note

./: .air.toml  .gitignore  .ignore  Earthfile  Justfile  README.md  angular.json  body.templ  body_templ.go  build.sh  go.mod  go.sum  justfile  main.go  package-lock.json  package.json  patient.go  tygo.yaml  view.go
assets/: main.css
css/: main.css
db/: module.go  scheme.sql  view.go
db/models/: bob_main.bob.go  bob_main.go  bob_main_test.bob.go  bob_main_test.go  bob_sqlite_blocks.go  patients.bob.go  patients.go  procedures.bob.go  procedures.go  settings.bob.go  settings.go
db/models/factory/: bobfactory_context.bob.go  bobfactory_context.go  bobfactory_main.bob.go  bobfactory_main.go  bobfactory_random.bob.go  bobfactory_random.go  bobfactory_random_test.bob.go  bobfactory_random_test.go  (+6 more)
server/: Cargo.toml  go.mod  go.sum  index.ts  main.go  tygo.yaml  view.go
server/bindings/: Gender.ts  ListPatient.ts  Patient.ts  Procedure.ts
server/db/: module.go
server/src/: main.rs  types.rs
src/: index.html  main.go  output.css
src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  patients.service.ts  types.ts
src/model/: patient.go
src/storage/: db.go
src/view/: events.go  patient.go  patiententry.go  select.go  view.go
static/: index.html
ui/: package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ui/src/: app.html
ui/static/: manifest.json
web/: angular.json  ionic.config.json  package-lock.json  package.json
web/public/: manifest.webmanifest
web/src/: global.scss  index.html  main.ts
(+71 files in other folders)
